--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -157,6 +157,7 @@ allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
 allow 151.80.148.159;
+allow 15.204.224.241;
 allow 15.204.238.148;
 allow 154.16.116.61;
 allow 154.213.184.100;
@@ -324,6 +325,7 @@ allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
 allow 185.165.169.42;
+allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
 allow 185.183.159.40;
@@ -391,7 +393,6 @@ allow 185.220.101.138;
 allow 185.220.101.139;
 allow 185.220.101.14;
 allow 185.220.101.140;
-allow 185.220.101.141;
 allow 185.220.101.142;
 allow 185.220.101.143;
 allow 185.220.101.145;
@@ -429,7 +430,6 @@ allow 185.220.101.179;
 allow 185.220.101.18;
 allow 185.220.101.182;
 allow 185.220.101.183;
-allow 185.220.101.184;
 allow 185.220.101.185;
 allow 185.220.101.186;
 allow 185.220.101.187;
@@ -584,6 +584,7 @@ allow 188.68.36.28;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
+allow 188.68.52.247;
 allow 190.120.229.98;
 allow 190.211.254.97;
 allow 192.108.48.150;
@@ -858,7 +859,6 @@ allow 205.185.113.180;
 allow 205.185.116.34;
 allow 205.185.117.149;
 allow 205.185.119.35;
-allow 205.185.120.107;
 allow 205.185.121.170;
 allow 205.185.123.198;
 allow 205.185.123.93;
@@ -951,6 +951,7 @@ allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
+allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
@@ -979,6 +980,7 @@ allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.161.232.50;
 allow 23.173.216.67;
+allow 23.184.48.48;
 allow 23.224.49.114;
 allow 23.224.49.44;
 allow 23.94.211.25;
@@ -1012,6 +1014,7 @@ allow 2602:fc24:12:3f11:39ca:318:0:1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
+allow 2602:fc24:18:30d2::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
@@ -1294,6 +1297,7 @@ allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
+allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
@@ -1335,7 +1339,6 @@ allow 2a0b:f4c2:1::137;
 allow 2a0b:f4c2:1::138;
 allow 2a0b:f4c2:1::139;
 allow 2a0b:f4c2:1::140;
-allow 2a0b:f4c2:1::141;
 allow 2a0b:f4c2:1::142;
 allow 2a0b:f4c2:1::143;
 allow 2a0b:f4c2:1::145;
@@ -1369,7 +1372,6 @@ allow 2a0b:f4c2:1::178;
 allow 2a0b:f4c2:1::179;
 allow 2a0b:f4c2:1::182;
 allow 2a0b:f4c2:1::183;
-allow 2a0b:f4c2:1::184;
 allow 2a0b:f4c2:1::185;
 allow 2a0b:f4c2:1::186;
 allow 2a0b:f4c2:1::187;
@@ -1556,6 +1558,7 @@ allow 2a12:a800:2:1:45:141:215:111;
 allow 2a12:a800:2:1:45:141:215:114;
 allow 2a12:a800:2:1:45:141:215:116;
 allow 2a12:a800:2:1:45:141:215:167;
+allow 2a12:a800:2:1:45:141:215:169;
 allow 2a12:a800:2:1:45:141:215:17;
 allow 2a12:a800:2:1:45:141:215:19;
 allow 2a12:a800:2:1:45:141:215:21;
@@ -1625,6 +1628,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
 allow 45.129.84.247;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1643,6 +1647,7 @@ allow 45.141.215.111;
 allow 45.141.215.114;
 allow 45.141.215.116;
 allow 45.141.215.167;
+allow 45.141.215.169;
 allow 45.141.215.17;
 allow 45.141.215.19;
 allow 45.141.215.21;
