--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -132,6 +132,7 @@ allow 2602:fc24:12:3f11:39ca:318:0:1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
+allow 2602:fc24:18:30d2::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
@@ -413,6 +414,7 @@ allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
+allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
@@ -454,7 +456,6 @@ allow 2a0b:f4c2:1::137;
 allow 2a0b:f4c2:1::138;
 allow 2a0b:f4c2:1::139;
 allow 2a0b:f4c2:1::140;
-allow 2a0b:f4c2:1::141;
 allow 2a0b:f4c2:1::142;
 allow 2a0b:f4c2:1::143;
 allow 2a0b:f4c2:1::145;
@@ -488,7 +489,6 @@ allow 2a0b:f4c2:1::178;
 allow 2a0b:f4c2:1::179;
 allow 2a0b:f4c2:1::182;
 allow 2a0b:f4c2:1::183;
-allow 2a0b:f4c2:1::184;
 allow 2a0b:f4c2:1::185;
 allow 2a0b:f4c2:1::186;
 allow 2a0b:f4c2:1::187;
@@ -675,6 +675,7 @@ allow 2a12:a800:2:1:45:141:215:111;
 allow 2a12:a800:2:1:45:141:215:114;
 allow 2a12:a800:2:1:45:141:215:116;
 allow 2a12:a800:2:1:45:141:215:167;
+allow 2a12:a800:2:1:45:141:215:169;
 allow 2a12:a800:2:1:45:141:215:17;
 allow 2a12:a800:2:1:45:141:215:19;
 allow 2a12:a800:2:1:45:141:215:21;
