--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -132,6 +132,7 @@ deny 2602:fc24:12:3f11:39ca:318:0:1;
 deny 2602:fc24:12:4870:39ca:318:0:1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
+deny 2602:fc24:18:30d2::1;
 deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:30::1;
@@ -413,6 +414,7 @@ deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
+deny 2a06:1700:0:50::11;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
@@ -454,7 +456,6 @@ deny 2a0b:f4c2:1::137;
 deny 2a0b:f4c2:1::138;
 deny 2a0b:f4c2:1::139;
 deny 2a0b:f4c2:1::140;
-deny 2a0b:f4c2:1::141;
 deny 2a0b:f4c2:1::142;
 deny 2a0b:f4c2:1::143;
 deny 2a0b:f4c2:1::145;
@@ -488,7 +489,6 @@ deny 2a0b:f4c2:1::178;
 deny 2a0b:f4c2:1::179;
 deny 2a0b:f4c2:1::182;
 deny 2a0b:f4c2:1::183;
-deny 2a0b:f4c2:1::184;
 deny 2a0b:f4c2:1::185;
 deny 2a0b:f4c2:1::186;
 deny 2a0b:f4c2:1::187;
@@ -675,6 +675,7 @@ deny 2a12:a800:2:1:45:141:215:111;
 deny 2a12:a800:2:1:45:141:215:114;
 deny 2a12:a800:2:1:45:141:215:116;
 deny 2a12:a800:2:1:45:141:215:167;
+deny 2a12:a800:2:1:45:141:215:169;
 deny 2a12:a800:2:1:45:141:215:17;
 deny 2a12:a800:2:1:45:141:215:19;
 deny 2a12:a800:2:1:45:141:215:21;
