--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -157,6 +157,7 @@ set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.22.133;
 set_real_ip_from 149.56.44.47;
 set_real_ip_from 151.80.148.159;
+set_real_ip_from 15.204.224.241;
 set_real_ip_from 15.204.238.148;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.213.184.100;
@@ -324,6 +325,7 @@ set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
 set_real_ip_from 185.165.169.42;
+set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.183.157.214;
 set_real_ip_from 185.183.159.40;
@@ -391,7 +393,6 @@ set_real_ip_from 185.220.101.138;
 set_real_ip_from 185.220.101.139;
 set_real_ip_from 185.220.101.14;
 set_real_ip_from 185.220.101.140;
-set_real_ip_from 185.220.101.141;
 set_real_ip_from 185.220.101.142;
 set_real_ip_from 185.220.101.143;
 set_real_ip_from 185.220.101.145;
@@ -429,7 +430,6 @@ set_real_ip_from 185.220.101.179;
 set_real_ip_from 185.220.101.18;
 set_real_ip_from 185.220.101.182;
 set_real_ip_from 185.220.101.183;
-set_real_ip_from 185.220.101.184;
 set_real_ip_from 185.220.101.185;
 set_real_ip_from 185.220.101.186;
 set_real_ip_from 185.220.101.187;
@@ -584,6 +584,7 @@ set_real_ip_from 188.68.36.28;
 set_real_ip_from 188.68.41.191;
 set_real_ip_from 188.68.49.235;
 set_real_ip_from 188.68.52.231;
+set_real_ip_from 188.68.52.247;
 set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
 set_real_ip_from 192.108.48.150;
@@ -858,7 +859,6 @@ set_real_ip_from 205.185.113.180;
 set_real_ip_from 205.185.116.34;
 set_real_ip_from 205.185.117.149;
 set_real_ip_from 205.185.119.35;
-set_real_ip_from 205.185.120.107;
 set_real_ip_from 205.185.121.170;
 set_real_ip_from 205.185.123.198;
 set_real_ip_from 205.185.123.93;
@@ -951,6 +951,7 @@ set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
+set_real_ip_from 23.154.177.15;
 set_real_ip_from 23.154.177.16;
 set_real_ip_from 23.154.177.17;
 set_real_ip_from 23.154.177.18;
@@ -979,6 +980,7 @@ set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.161.232.50;
 set_real_ip_from 23.173.216.67;
+set_real_ip_from 23.184.48.48;
 set_real_ip_from 23.224.49.114;
 set_real_ip_from 23.224.49.44;
 set_real_ip_from 23.94.211.25;
@@ -1012,6 +1014,7 @@ set_real_ip_from 2602:fc24:12:3f11:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:4870:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
+set_real_ip_from 2602:fc24:18:30d2::1;
 set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:2b4::1;
 set_real_ip_from 2602:fc24:19:30::1;
@@ -1294,6 +1297,7 @@ set_real_ip_from 2a06:1700:0:15::4;
 set_real_ip_from 2a06:1700:0:16::1;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:47::166;
+set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
@@ -1335,7 +1339,6 @@ set_real_ip_from 2a0b:f4c2:1::137;
 set_real_ip_from 2a0b:f4c2:1::138;
 set_real_ip_from 2a0b:f4c2:1::139;
 set_real_ip_from 2a0b:f4c2:1::140;
-set_real_ip_from 2a0b:f4c2:1::141;
 set_real_ip_from 2a0b:f4c2:1::142;
 set_real_ip_from 2a0b:f4c2:1::143;
 set_real_ip_from 2a0b:f4c2:1::145;
@@ -1369,7 +1372,6 @@ set_real_ip_from 2a0b:f4c2:1::178;
 set_real_ip_from 2a0b:f4c2:1::179;
 set_real_ip_from 2a0b:f4c2:1::182;
 set_real_ip_from 2a0b:f4c2:1::183;
-set_real_ip_from 2a0b:f4c2:1::184;
 set_real_ip_from 2a0b:f4c2:1::185;
 set_real_ip_from 2a0b:f4c2:1::186;
 set_real_ip_from 2a0b:f4c2:1::187;
@@ -1556,6 +1558,7 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:111;
 set_real_ip_from 2a12:a800:2:1:45:141:215:114;
 set_real_ip_from 2a12:a800:2:1:45:141:215:116;
 set_real_ip_from 2a12:a800:2:1:45:141:215:167;
+set_real_ip_from 2a12:a800:2:1:45:141:215:169;
 set_real_ip_from 2a12:a800:2:1:45:141:215:17;
 set_real_ip_from 2a12:a800:2:1:45:141:215:19;
 set_real_ip_from 2a12:a800:2:1:45:141:215:21;
@@ -1625,6 +1628,7 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
 set_real_ip_from 45.129.84.247;
+set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.205.138;
@@ -1643,6 +1647,7 @@ set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
 set_real_ip_from 45.141.215.116;
 set_real_ip_from 45.141.215.167;
+set_real_ip_from 45.141.215.169;
 set_real_ip_from 45.141.215.17;
 set_real_ip_from 45.141.215.19;
 set_real_ip_from 45.141.215.21;
