--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -132,6 +132,7 @@ set_real_ip_from 2602:fc24:12:3f11:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:4870:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
+set_real_ip_from 2602:fc24:18:30d2::1;
 set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:2b4::1;
 set_real_ip_from 2602:fc24:19:30::1;
@@ -413,6 +414,7 @@ set_real_ip_from 2a06:1700:0:15::4;
 set_real_ip_from 2a06:1700:0:16::1;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:47::166;
+set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
@@ -454,7 +456,6 @@ set_real_ip_from 2a0b:f4c2:1::137;
 set_real_ip_from 2a0b:f4c2:1::138;
 set_real_ip_from 2a0b:f4c2:1::139;
 set_real_ip_from 2a0b:f4c2:1::140;
-set_real_ip_from 2a0b:f4c2:1::141;
 set_real_ip_from 2a0b:f4c2:1::142;
 set_real_ip_from 2a0b:f4c2:1::143;
 set_real_ip_from 2a0b:f4c2:1::145;
@@ -488,7 +489,6 @@ set_real_ip_from 2a0b:f4c2:1::178;
 set_real_ip_from 2a0b:f4c2:1::179;
 set_real_ip_from 2a0b:f4c2:1::182;
 set_real_ip_from 2a0b:f4c2:1::183;
-set_real_ip_from 2a0b:f4c2:1::184;
 set_real_ip_from 2a0b:f4c2:1::185;
 set_real_ip_from 2a0b:f4c2:1::186;
 set_real_ip_from 2a0b:f4c2:1::187;
@@ -675,6 +675,7 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:111;
 set_real_ip_from 2a12:a800:2:1:45:141:215:114;
 set_real_ip_from 2a12:a800:2:1:45:141:215:116;
 set_real_ip_from 2a12:a800:2:1:45:141:215:167;
+set_real_ip_from 2a12:a800:2:1:45:141:215:169;
 set_real_ip_from 2a12:a800:2:1:45:141:215:17;
 set_real_ip_from 2a12:a800:2:1:45:141:215:19;
 set_real_ip_from 2a12:a800:2:1:45:141:215:21;
