--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -145,7 +145,6 @@ set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:a880:400:d0::28:6001;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
-set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
@@ -301,7 +300,6 @@ set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
-set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:12c::4d3a;
@@ -322,6 +320,7 @@ set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
+set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
@@ -619,7 +618,6 @@ set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
 set_real_ip_from 2a0f:9400:7e11:2859::1;
 set_real_ip_from 2a0f:9400:7e11:73bc::1;
-set_real_ip_from 2a0f:9400:7e11:8ba1::1;
 set_real_ip_from 2a0f:9400:7e11:b60::1;
 set_real_ip_from 2a0f:9400:7e11:ce4d::1;
 set_real_ip_from 2a0f:ca80:0:e57f::82e1:3f1b;
