--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -103,7 +103,6 @@ deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4002:143e::b;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -618,6 +617,7 @@ deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:9400:7e11:2859::1;
 deny 2a0f:9400:7e11:73bc::1;
+deny 2a0f:9400:7e11:8ba1::1;
 deny 2a0f:9400:7e11:b60::1;
 deny 2a0f:9400:7e11:ce4d::1;
 deny 2a0f:ca80:0:e57f::82e1:3f1b;
